# ml-nexus

./: .gitignore  README.md  pyproject.toml
mlnexus/clustering/: _kmeans.py
mlnexus/linear_model/: _linear_regression.py  _logistic_regression.py  _perceptron.py
mlnexus/neighbors/: _knn.py
mlnexus/neural_network/: mlp.py
mlnexus/tree/: _decision_tree.py
notebooks/: DecisionTree.ipynb  KMeans.ipynb  KNNClassifier.ipynb  KNNRegression.ipynb  Linear_Regression.ipynb  Logistic_Regression.ipynb  Perceptron.ipynb
