[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]

name = "ml-nexus"
version = "0.0.1"
authors = [
  { name="Shilpa Musale", email="shilpa.musale02@gmail.com" },
]
description = "A from-scratch implementation of machine learning algorithms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0",
    "pandas>=1.3.0",
]



[project.urls]
Homepage = "https://github.com/shilpamusale/ml-nexus-project"
"Bug Tracker" = "https://github.com/shilpamusale/ml-nexus-project/issues"

# This section explicitly tells setuptools where to find your package.
[tool.setuptools]
# By default, setuptools will look for an __init__.py file and assume
# that the directory is a package. This tells it to only look for 'mlnexus'.
packages = ["mlnexus"]
